--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
 	<div class="ctx" id="scene1">hi</div>
 </body>
-<script src="engine.js"></script>
+
+<script src="https://raw.githubusercontent.com/Liksu/ctx/master/src/engine.js"></script>
+
 </html>
