--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	</head>
 
 	<body>
-		<div class="ctx" id="scene1"></div>
-		<div class="ctx" id="scene2"></div>
+		<div class="ctx" id="main"></div>
+		<div class="ctx" id="test"></div>
+		<div class="ctx" id="bubbles"></div>
 	</body>
 
 	<script src="src/utils.js"></script>
