--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 	</head>
 
 	<body>
+		<!--
 		<div class="ctx" id="main"></div>
 		<div class="ctx" id="test"></div>
+		<div class="ctx" id="bubbles"></div>
+
+		<div class="ctx" id="main50"></div>
+		<div class="ctx" id="bubbles50"></div>
+		-->
+		
 		<div class="ctx" id="bubbles"></div>
 	</body>
 
